--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>Tutorial Javascript</title>
 </head>
 <body>
-    <h1>Treinamento 1</h1>
+    <h1>Curso</h1>
+    <script src="script.js"></script>
 </body>
 </html>
